<resources>
    <string name="app_name">ProhibitingSignDetector</string>

    <string name="text_lower_hue">LH: %1$d</string>
    <string name="text_upper_hue">UH: %1$d</string>
    <string name="text_min_saturation">MS: %1$d</string>
    <string name="text_min_value">MV: %1$d</string>
    <string name="text_blur">B: %1$d</string>

    <string name="text_min_area">MA: %1$d</string>
    <string name="text_min_circularity">MC: %1$.2f</string>
    <string name="text_min_inertia_ratio">MIR: %1$.2f</string>
</resources>
