<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.dksta.prohibitingsigndetector.FragmentSettings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/play"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/ic_play_arrow_36dp"/>

        <ImageView
            android:id="@+id/layers"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/ic_filter_36dp"/>

        <ImageView
            android:id="@+id/noise"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/ic_photo_36dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:weightSum="2">

            <View
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FF0000"/>

            <View
                android:id="@+id/lowerThreshold"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>

        <TextView
            android:id="@+id/lowerHue"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/text_lower_hue"/>

        <com.github.shchurov.horizontalwheelview.HorizontalWheelView
            android:id="@+id/lowerHueWheel"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            app:onlyPositiveValues="true"
            app:marksCount="179"
            app:activeColor="#202020"
            app:normalColor="#b5b5b5"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:weightSum="2">

            <View
                android:id="@+id/upperThreshold"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FF0004"/>

        </LinearLayout>

        <TextView
            android:id="@+id/upperHue"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/text_upper_hue"/>

        <com.github.shchurov.horizontalwheelview.HorizontalWheelView
            android:id="@+id/upperHueWheel"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:onlyPositiveValues="true"
            app:marksCount="179"
            app:activeColor="#202020"
            app:normalColor="#b5b5b5"/>

        <TextView
            android:id="@+id/minSaturation"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/text_min_saturation"/>

        <com.github.shchurov.horizontalwheelview.HorizontalWheelView
            android:id="@+id/minSaturationWheel"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:onlyPositiveValues="true"
            app:marksCount="255"
            app:activeColor="#202020"
            app:normalColor="#b5b5b5"/>

        <TextView
            android:id="@+id/minValue"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/text_min_value"/>

        <com.github.shchurov.horizontalwheelview.HorizontalWheelView
            android:id="@+id/minValueWheel"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:onlyPositiveValues="true"
            app:marksCount="255"
            app:activeColor="#202020"
            app:normalColor="#b5b5b5"/>

        <TextView
            android:id="@+id/blur"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/text_blur"/>

        <com.github.shchurov.horizontalwheelview.HorizontalWheelView
            android:id="@+id/blurWheel"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:onlyPositiveValues="true"
            app:marksCount="9"
            app:snapToMarks="true"
            app:activeColor="#202020"
            app:normalColor="#b5b5b5"/>

        <TextView
            android:id="@+id/minArea"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/text_min_area"/>

        <com.github.shchurov.horizontalwheelview.HorizontalWheelView
            android:id="@+id/minAreaWheel"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:onlyPositiveValues="true"
            app:marksCount="480"
            app:activeColor="#202020"
            app:normalColor="#b5b5b5"/>

        <TextView
            android:id="@+id/minCircularity"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/text_min_circularity"/>

        <com.github.shchurov.horizontalwheelview.HorizontalWheelView
            android:id="@+id/minCircularityWheel"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:onlyPositiveValues="true"
            app:marksCount="100"
            app:activeColor="#202020"
            app:normalColor="#b5b5b5"/>

        <TextView
            android:id="@+id/minInertiaRatio"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/text_min_inertia_ratio"/>

        <com.github.shchurov.horizontalwheelview.HorizontalWheelView
            android:id="@+id/minInertiaRatioWheel"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:onlyPositiveValues="true"
            app:marksCount="100"
            app:activeColor="#202020"
            app:normalColor="#b5b5b5"/>

        <ImageView
            android:id="@+id/rotate"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/ic_rotate_left_white_36dp"/>

        <ImageView
            android:id="@+id/showInfo"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/ic_info_outline_white_36dp"/>

        <ImageView
            android:id="@+id/secondView"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/ic_burst_mode_white_36dp"/>

        <ImageView
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/ic_save_white_36dp"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
